--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
+        "prettier": "2.5.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "tailwindcss": "^2.0.2"
